<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loremipsum_onboard">Lorem ipsum dolor sit amet,
consectetur adipisicing. Maxime,
tempore! Animi nemo aut atque,
 deleniti nihil dolorem repellendus.</string>
    <string name="get_things_done_with_todo">Get things done with TODo</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="sign_in"> Sign In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="create_a_password">Create a Password</string>
    <string name="sign_up"> Sign Up</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="elipseimage">elipseImage</string>
    <string name="kidwithboard">kidWithBoard</string>
    <string name="backbutton">BackButton</string>
   <string name="welcome_back">Welcome Back!</string>
   <string name="let_s_help_you_meet_up_your_task">Let\'s help you meet up your task</string>
    <string name="todo_tasks">Todo Tasks.</string>
    <string name="dairy_tasks">Dairy Tasks</string>
    <string name="add_to_list">Add to List</string>
    <string name="add_what_your_want_to_do_later_on">Add. What your want to do later on…</string>
    <string name="success_message">Success</string>
    <string name="not_success_message">Not Successful</string>
    <string name="failed_credentials">Failed to sign up, please check your credentials.</string>
    <string name="adready_auth">User already authenticated</string>
    <string name="item_add_fail">Failed to add item</string>
    <string name="image_of_boy_and_girl">Image of Boy and Girl</string>
    <string name="image_of_a_guy_sitting">Image of a guy sitting</string>
    <string name="rectangle_image">Rectangle Image</string>
    <string name="user_avatar_image">User Avatar Image</string>
    <string name="image_of_a_young_woman">Image of a Young Woman</string>
    <string name="addition_button">Addition Button</string>

</resources>