<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        tools:context=".ui.addition.AdditionFragment">


        <ImageView
            android:id="@+id/imageview_ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/elipseimage" />

        <ImageView
            android:id="@+id/imageview_backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="67dp"
            android:src="@drawable/ic_backbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/backbutton" />

        <TextView
            android:id="@+id/textview_welcomeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAppearance="@style/get_things_"
            app:layout_constraintBottom_toTopOf="@+id/imageview_whiteboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_ellipse"
            app:layout_constraintVertical_bias="0.35" />

        <ImageView
            android:id="@+id/imageview_whiteboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_whiteboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36"
            android:contentDescription="@string/kidwithboard" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:inputType="text"
                android:background="@drawable/inputlayout_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/enter_your_email_address"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:paddingEnd="29dp"
                android:textColorHint="#BF000000"
                android:paddingBottom="10dp"
                android:maxLines="1"
                android:textColor="#BD000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview_whiteboard"
                app:layout_constraintVertical_bias="0.03"
                app:hintEnabled="false"
                android:textSize="13sp" />




            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:inputType="textPassword"
                android:layout_marginEnd="45dp"
                android:background="@drawable/inputlayout_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/confirm_password"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:textColorHint="#BF000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinput_email"
                app:layout_constraintVertical_bias="0.08"
                android:paddingEnd="29dp"
                android:paddingBottom="10dp"
                android:textColor="#BD000000"
                android:textSize="13sp" />


        <TextView
            android:id="@+id/textview_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/forgot_password"
            android:textColor="@color/appMainGreen"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_password"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_order_selected_border"
            android:text="@string/sign_in"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.885714"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_donthaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/dont_have_an_account"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textview_signuptextbutton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/textview_signuptextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/sign_up"
            android:textColor="@color/appMainGreen"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/textview_donthaveanaccount"
            app:layout_constraintTop_toTopOf="@+id/textview_donthaveanaccount" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>