<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.OnBoardFragment"
        android:background="#EDEDED">


        <ImageView
            android:id="@+id/imageview_ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/elipseimage" />

        <ImageView
            android:id="@+id/imageview_guysitting"
            android:layout_width="345dp"
            android:layout_height="254dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="388dp"
            android:contentDescription="@string/image_of_a_guy_sitting"
            android:src="@drawable/ic_youngman"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_ellipse" />

        <TextView
            android:id="@+id/textview_getthingsdone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:text="@string/get_things_done_with_todo"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/get_things_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_guysitting" />

        <TextView
            android:id="@+id/textview_loremipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="74dp"
            android:layout_marginStart="74dp"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/lorem_ipsum"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/loremipsum_onboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_getthingsdone" />

        <Button
            android:id="@+id/button_getstarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="87dp"
            android:background="@drawable/btn_order_selected_border"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_loremipsum" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>