<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable type="com.example.todoapp.domain.model.ApplicationUser" name="activity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        tools:context=".ui.todomain.TodoPageFragment">

        <ImageView
            android:id="@+id/imageview_ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/elipseimage"/>

        <ImageView
            android:id="@+id/imageview_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/rectangle_image" />

        <ImageView
            android:id="@+id/imageview_useravatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageview_rectangle"
            app:layout_constraintVertical_bias="0.4324"
            android:contentDescription="@string/user_avatar_image" />

        <ImageView
            android:id="@+id/imageview_youngwoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_youngwoman"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageview_rectangle"
            app:layout_constraintVertical_bias="0.4970"
            android:contentDescription="@string/image_of_a_young_woman" />

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_useravatar"
            app:layout_constraintVertical_bias="0.3518" />

        <TextView
            android:id="@+id/textview_todotasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/todo_tasks"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_youngwoman" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_todotasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="false"
            android:focusable="false"
            app:cardCornerRadius="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"

            app:layout_constraintTop_toTopOf="@+id/guideline2">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_taskstobeadded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="34dp"
                    android:alpha="0.7"
                    android:background="@drawable/inputlayout_edittext_background"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/dairy_tasks"
                    android:paddingTop="13dp"
                    android:paddingBottom="10dp"
                    android:inputType="text"
                    android:textAlignment="viewStart"
                    android:textColorHint="#BD000000"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.058" />

                <ImageView
                    android:id="@+id/imageview_additionbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_addicon"
                    app:layout_constraintBottom_toBottomOf="@+id/textinput_taskstobeadded"
                    app:layout_constraintEnd_toEndOf="@+id/textinput_taskstobeadded"
                    app:layout_constraintTop_toTopOf="@+id/textinput_taskstobeadded"
                    android:contentDescription="@string/addition_button" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scrollbars="vertical"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textinput_taskstobeadded"
                    app:layout_constraintStart_toStartOf="@+id/textinput_taskstobeadded"
                    app:layout_constraintTop_toBottomOf="@+id/textinput_taskstobeadded" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>