<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.todoapp.ui.register.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDEDED"
        tools:context=".ui.login.LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterFullName"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.068">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/enter_your_full_name"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:paddingEnd="29dp"
                android:paddingBottom="10dp"
                android:textColor="#BD000000"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmail"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterFullName"
            app:layout_constraintVertical_bias="0.066">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/enter_your_email_address"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:paddingEnd="29dp"
                android:paddingBottom="10dp"
                android:textColor="#BD000000"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createPassword"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterEmail"
            app:layout_constraintVertical_bias="0.08">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/create_a_password"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:inputType="textPassword"
                android:paddingEnd="29dp"
                android:paddingBottom="10dp"
                android:textColor="#BD000000"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="67dp"
            android:src="@drawable/backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_onboard"
            android:textAppearance="@style/get_things_"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ellipse" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPassword"
            app:layout_constraintVertical_bias="0.09">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/confirm_your_password"
                android:paddingStart="29dp"
                android:paddingTop="13dp"
                android:paddingEnd="29dp"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:textColor="#BD000000"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="Let's help you meet up your task"
            android:textColor="@color/appMainGreen"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/noroundbutton"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            android:text="@string/sign_up"
            app:layout_constraintVertical_bias="0.885714"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SignInTextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <TextView
            android:id="@+id/SignInTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/sign_in"
            android:textColor="@color/appMainGreen"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>